Fixed Instag feed paragraph spacing

--- a/less/style.less
+++ b/less/style.less
@@ -3468,7 +3468,7 @@ body {
   }
   .caption {
     margin-bottom: 15px;
-    max-height: 80px;
+    height: 120px;
     overflow: hidden;
     text-overflow: ellipsis;
     color: #777777;
